# velowin-core

./: Cargo.toml  build.rs
native/: renderer.cpp
src/: Compositor.rs  config.rs  defines.rs  dwindle.rs  ffi.rs  keybinds.rs  macros.rs  main.rs  manager.rs
src/config/: ConfigManager.rs  mod.rs
src/desktop/: Window.rs  Workspace.rs  mod.rs
src/helpers/: AnimatedVariable.rs  Logger.rs  Types.rs  mod.rs
src/layout/: mod.rs
src/layout/algorithm/tiled/: mod.rs
src/layout/algorithm/tiled/dwindle/: DwindleAlgorithm.rs  mod.rs
src/layout/algorithm/tiled/master/: MasterLayout.rs  mod.rs
src/managers/: EventManager.rs  KeybindManager.rs  MonitorManager.rs  WindowManager.rs  mod.rs
src/managers/animation/: AnimationManager.rs  mod.rs
src/managers/cursor/: mod.rs
src/render/: Renderer.cpp  Renderer.rs  mod.rs
src/render/decorations/: CHyprBorderDecoration.rs  mod.rs
