[package]
name = "velowin-core"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = "8.0.0"
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
