[package]
name = "velowin-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
ctrlc = "3.5.2"
nom = "8.0.0"
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["derive"] }
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Dwm",
] }

[build-dependencies]
cc = "1.2.63"
